--- a/README
+++ b/README
@@ -23,3 +23,7 @@ Arduino Mega - Microcontroller, might swap to a NodeMCU once I get things workin
 	Amazon Link: https://smile.amazon.com/gp/product/B00PNEQKC0/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1
 
 Breadboard and various jumper cables
+
+L298N Motor Drive Controller:
+	Amazon Link: https://www.amazon.com/gp/product/B014KMHSW6/ref=oh_aui_detailpage_o02_s00?ie=UTF8&psc=1
+
