Added arduino program I wrote when experimenting with a DC Motor Driver attached to an electromagnet.

--- a/README
+++ b/README
@@ -27,3 +27,5 @@ Breadboard and various jumper cables
 L298N Motor Drive Controller:
 	Amazon Link: https://www.amazon.com/gp/product/B014KMHSW6/ref=oh_aui_detailpage_o02_s00?ie=UTF8&psc=1
 
+Uxcell a13120300ux0142 DC12V 50N Electromagnet:
+	Amazon Link: https://www.amazon.com/gp/product/B00HR8M4QQ/ref=od_aui_detailpages00?ie=UTF8&psc=1
